--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,7 @@ importlib_resources==6.5.2
 itsdangerous==2.2.0
 Jinja2==3.1.6
 kiwisolver==1.4.7
-MarkupSafe==3.0.2git
+MarkupSafe==3.0.2
 matplotlib==3.9.4
 numpy==2.0.2
 packaging==25.0
